Create a global logger

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,6 +66,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         src/utils.hpp
         src/utils.cpp
         src/GUI/AppEventFilter.hpp src/GUI/AppEventFilter.cpp
+        src/GUI/LoggerWidget.h src/GUI/LoggerWidget.cpp
 
 
     )
