--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,7 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         src/utils.cpp
         src/GUI/AppEventFilter.hpp src/GUI/AppEventFilter.cpp
         src/GUI/LoggerWidget.h src/GUI/LoggerWidget.cpp
+        src/GUI/Playlist.hpp src/GUI/Playlist.cpp
 
 
     )
